@@ -1,3 +1,9 @@
+2001-12-18  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/win/wtext.c: Reallocate larger keyboard buffer instead of
+	silently ignoring input characters coming into an overfull buffer
+	(fixes piping 'plot "-" ... e' with large data sets, for instance).
+	
 2001-12-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* term/epslatex.trm (EPSL_put_text): Fix bug that would output TeX
